# fullstack-plil-proposal

fastapi-proposal-be/: main.py
react-proposal-fe/: index.html  package.json
react-proposal-fe/src/: App.jsx  listItems.jsx  theme.js
react-proposal-fe/src/components/: Dashboard.jsx  WebProposal.jsx
react-proposal-fe/src/components/atoms/: Pill.jsx
react-proposal-fe/src/components/sections/: Drawer.jsx  Navbar.jsx
react-proposal-fe/src/services/: proposalDatatable.js
wp-backend/: .flake8  .pre-commit-config.yaml  development.env  pyproject.toml
wp-backend/src/: config.py  database.py  dependencies.py  main.py
