[tool.poetry]
name = "wp-backend"
version = "0.1.0"
description = ""
authors = ["jiaulislam <kmjiaulislam@gmail.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.isort]
skip = [".gitignore", ".dockerignore"]
profile = "black"
line_length=110

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.88.0"
email-validator = "^1.3.0"
cx-oracle = "^8.3.0"
sqlalchemy = "^1.4.45"
pydantic = {extras = ["all"], version = "^1.10.2"}
python-dotenv = "^0.21.0"


[tool.poetry.group.dev.dependencies]
uvicorn = "^0.20.0"
black = "^22.12.0"
isort = "^5.11.2"
pre-commit = "^2.20.0"
alembic = "^1.8.1"
devtools = "^0.10.0"
pytest = "7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
wp = "src.main:run"


